apps/overlays/homelab/home_assistant/patch-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  template:
    spec:
      containers:
        - name: home-assistant
          image: "ghcr.io/home-assistant/home-assistant:stable"
          securityContext:
            privileged: true
          ports:
            - containerPort: 8123
          volumeMounts:
            - mountPath: /config
              name: data
            - mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              name: ha-config
            - mountPath: /config/secret.yaml
              subPath: secret.yaml
              name: entities
            - mountPath: /config/packages
              name: packages
            - mountPath: /config/http.yaml
              subPath: http.yaml
              name: ha-config
            - mountPath: /etc/localtime
              name: localtime
              readOnly: true
      volumes:
        - name: ha-config
          configMap:
            name: ha-config
        - name: entities
          secret:
            secretName: ha-secrets
        - name: packages
          configMap:
            name: ha-packages
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
        - name: data
          persistentVolumeClaim:
            claimName: home-assistant-pvc
