apps/overlays/homelab/home_assistant/patch-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  rules:
    - host: "homelab"
      http:
        paths:
          - path: "/ha"
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
